# waitkey

./: CMakeLists.txt  README.md  make-if.py  sample.c  terms.txt  waitkey.h
examples/: example1.c  example2.c
script/: make-if.py
